# Building_BankEase

./: .gitignore
team_AI/: .env_example  README.md  pyproject.toml
team_AI/configs/: __init__.py  configs.py  log_config.yaml  logging_setup.py  plaid_sbx_configs.yaml
team_AI/data/: balance.csv  balance.json  identity.csv  institutions.csv  institutions.json  items.csv  items.json  transactions.csv  transactions.json
team_AI/src/sandbox_plaid/: get_balance.py  get_identity.py  get_institutions.py  get_item.py  get_transactions.py  get_transactions_flattened.py
team_AI/utils/: __init__.py  data_to_json.py  delete_files.py  fetch_response.py  flattened_data.py  get_access_token.py  get_available_products.py  get_cols_series.py  json_to_csv.py  list_of_dicts_to_csv.py  response_to_json.py
